--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: any
   ui:
     path: ../ui
+  supabase_flutter: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,8 +60,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  #  assets:
-  #    - assets/
+  assets:
+    - assets/
   #    - assets/countries/
 
   # An image asset can refer to one or more resolution-specific "variants", see
